logs/Slang/generated/keywords/5.6.2--keyword_module.sv.log
name: module
description: The 'module' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_module.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_module.sv:8:8: error: expected declarator
    bit module;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_module.sv:8:15: error: expected identifier
    bit module;
              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_module.sv:9:10: error: expected 'endmodule'
endmodule
         ^
